--- a/skins/classic/message_highlight.css
+++ b/skins/classic/message_highlight.css
@@ -1,49 +1,23 @@
+/* mail list */
 .rcmfd_mh_row td {
     background-color: transparent !important;
 }
 
-.rcmfd_mh_header {
-    font-size: 10pt;
-    margin-right: 10px;
+
+/* settings */
+.mh_preferences_row {
+    display: flex;
+    align-items: center;
 }
 
-.rcmfd_mh_input {
-    font-size: 10pt;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-}
-
-.mh_color {
-    margin-right: 10px;
-}
-
-.mh_color_input_2 {
-    background-color:#FF764D;
-    border:1px solid black;
-    cursor:pointer;
-    display:inline-block;
-    float:none;
-    height: 20px;
-    width:100px;
-    margin-left: 10px;
-    vertical-align: top;
-}
-
-.mh_color_input {
-    width: 100px;
-    height: 20px;
-    display: none;
-    padding-top: 4px;
-    margin-right: 10px;
-}
-
-.mh_button {
+.mh_preferences_row .ml-3 {
     margin-left: 10px;
 }
 
-.mh_first {
-    display: none;
+.mh_preferences_row .ml-5 {
+    margin-left: 15px;
 }
+
 
 /* icon */
 #sections-table #rcmrowmh_preferences td.section {
