--- a/skins/elastic/message_highlight.css
+++ b/skins/elastic/message_highlight.css
@@ -1,64 +1,22 @@
+/* mail list */
 .rcmfd_mh_row td {
     background-color: transparent !important;
 }
 
-.rcmfd_mh_header {
-    font-size: 10pt;
-    margin-right: 10px;
-}
-
-.rcmfd_mh_input {
-    font-size: 10pt;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-}
+/* preferences */
 
 .mh_preferences_row {
     display: flex;
     align-items: center;
 }
 
-.mh_color_input_2 {
-    background-color:#FF764D;
-    border:1px solid black;
-    cursor:pointer;
-    display:inline-block;
-    float:none;
-    height: 20px;
-    width:100px;
-    margin-left: 10px;
-    vertical-align: top;
+.mh_preferences_row .mh_button {
+    border: 1px solid #ced4da;
 }
 
-.mh_color_input {
-    width: 100px;
-    height: 35px;
-    display: none;
-    padding-top: 4px;
-    margin-right: 10px;
-}
-
-.mh_delete:before {
-    content: "\f2ed";
-    height: 25px !important;
-}
-
-.mh_add:before {
-    content: '\f067';
-    height: 25px !important;
-}
-
-.mh_first {
-    display: none;
-}
-
-/* icon */
-#sections-table #rcmrowmh_preferences td.section {
-    background-position: 6px -238px;
-}
-
-#sections-table #rcmrowmh_preferences.selected td.section {
-    background-position: 6px -262px;
+/* pencil icon for settings item */
+.listing.iconized tr.mh_preferences>td.section:before {
+    content: "\f303";
 }
 
 /* remove some colorpicker elements */
